public interface Offre {
	int getNumero();
	int getMontant();
	double getTaux();
}
